--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "ioredis": "^5.6.1",
+    "isomorphic-dompurify": "^2.25.0",
     "next": "15.3.3",
     "postcss": "^8.5.4",
     "qs": "^6.14.0",
