--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@awesome.me/kit-0e07a43543": "^1.0.4",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@meilisearch/instant-meilisearch": "^0.26.0",
+    "instantsearch.js": "^4.78.3",
     "ioredis": "^5.6.1",
     "isomorphic-dompurify": "^2.25.0",
     "next": "15.3.3",
