--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^19.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
-    "sonner": "^2.0.5"
+    "sonner": "^2.0.5",
+    "web-vitals": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
