--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,6 +5,9 @@ steps:
   # Step 1: Build the Docker image
   - name: 'gcr.io/cloud-builders/docker'
     id: 'Build Docker Image'
+    # ---- ADD THIS LINE ----
+    env: ['DOCKER_BUILDKIT=1']
+    # -----------------------
     args:
       - 'build'
       - '-t'
