--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "instantsearch.js": "^4.78.3",
     "ioredis": "^5.6.1",
     "isomorphic-dompurify": "^2.25.0",
+    "lodash.debounce": "^4.0.8",
     "next": "15.3.3",
     "postcss": "^8.5.4",
     "qs": "^6.14.0",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.8",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/qs": "^6.14.0",
     "@types/react": "^19",
