--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,10 +31,10 @@
   },
   "include": [
     "next-env.d.ts",
+    "src/types/css.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    "src/types/**/*.d.ts"
+    ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
