--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -26,6 +26,8 @@ steps:
       - '--build-arg'
       - 'NEXT_PUBLIC_HOSTNAME=${_NEXT_PUBLIC_HOSTNAME}'
       - '--build-arg'
+      - 'NEXT_PUBLIC_SITE_URL=${_NEXT_PUBLIC_SITE_URL}'
+      - '--build-arg'
       - 'NEXT_LANG=${_NEXT_LANG}'
       - '--build-arg'
       - 'NEXT_PUBLIC_MEILISEARCH_HOST=${_NEXT_PUBLIC_MEILISEARCH_HOST}'
@@ -41,7 +43,8 @@ steps:
       - 'NEXT_PUBLIC_GAMES_API_URL=${_NEXT_PUBLIC_GAMES_API_URL}'
       - '--build-arg'
       - 'NEXT_PUBLIC_GAMES_API_TOKEN=${_NEXT_PUBLIC_GAMES_API_TOKEN}'
-      # REMOVED Redis build args - they should only be set at runtime
+      - '--build-arg'
+      - 'NEXT_PUBLIC_BASE_PATH=${_NEXT_PUBLIC_BASE_PATH}'
   
   # Step 2: Push the Docker image to Google Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
@@ -81,6 +84,7 @@ steps:
         NEXT_PUBLIC_SITE_ID=${_NEXT_PUBLIC_SITE_ID},
         NEXT_PUBLIC_SITE_NAME=${_NEXT_PUBLIC_SITE_NAME},
         NEXT_PUBLIC_HOSTNAME=${_NEXT_PUBLIC_HOSTNAME},
+        NEXT_PUBLIC_SITE_URL=${_NEXT_PUBLIC_SITE_URL},
         NEXT_LANG=${_NEXT_LANG},
         NEXT_PUBLIC_MEILISEARCH_HOST=${_NEXT_PUBLIC_MEILISEARCH_HOST},
         NEXT_PUBLIC_MEILISEARCH_SEARCH_KEY=${_NEXT_PUBLIC_MEILISEARCH_SEARCH_KEY},
@@ -91,7 +95,8 @@ steps:
         NEXT_PUBLIC_GAMES_API_TOKEN=${_NEXT_PUBLIC_GAMES_API_TOKEN},
         REDIS_HOST=${_REDIS_HOST},
         REDIS_PORT=${_REDIS_PORT},
-        REDIS_PASSWORD=${_REDIS_PASSWORD}
+        REDIS_PASSWORD=${_REDIS_PASSWORD},
+        NEXT_PUBLIC_BASE_PATH=${_NEXT_PUBLIC_BASE_PATH}
 
 # List of images built by this pipeline
 images:
@@ -119,6 +124,8 @@ substitutions:
   _NEXT_PUBLIC_IMAGE_BUCKET: 'your-image-bucket-name'
   _NEXT_PUBLIC_GAMES_API_URL: 'https://games.example.com'
   _NEXT_PUBLIC_GAMES_API_TOKEN: 'your_games_api_token'
+  _NEXT_PUBLIC_SITE_URL: 'https://www.example.com'
+  _NEXT_PUBLIC_BASE_PATH: '/it'
   
   # --- Secret/VPC substitutions (Best to configure in trigger) ---
   _REDIS_HOST: '10.0.0.3'
