--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.8",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/grecaptcha": "^3.0.9",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/qs": "^6.14.0",
