--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -45,6 +45,8 @@ steps:
       - 'NEXT_PUBLIC_GAMES_API_TOKEN=${_NEXT_PUBLIC_GAMES_API_TOKEN}'
       - '--build-arg'
       - 'NEXT_PUBLIC_BASE_PATH=${_NEXT_PUBLIC_BASE_PATH}'
+      - '--build-arg'
+      - 'NEXT_PUBLIC_SWETRIX_PROJECT_ID=${_NEXT_PUBLIC_SWETRIX_PROJECT_ID}'
   
   # Step 2: Push the Docker image to Google Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
@@ -96,7 +98,8 @@ steps:
         REDIS_HOST=${_REDIS_HOST},
         REDIS_PORT=${_REDIS_PORT},
         REDIS_PASSWORD=${_REDIS_PASSWORD},
-        NEXT_PUBLIC_BASE_PATH=${_NEXT_PUBLIC_BASE_PATH}
+        NEXT_PUBLIC_BASE_PATH=${_NEXT_PUBLIC_BASE_PATH},
+        NEXT_PUBLIC_SWETRIX_PROJECT_ID=${_NEXT_PUBLIC_SWETRIX_PROJECT_ID}
 
 # List of images built by this pipeline
 images:
@@ -126,6 +129,7 @@ substitutions:
   _NEXT_PUBLIC_GAMES_API_TOKEN: 'your_games_api_token'
   _NEXT_PUBLIC_SITE_URL: 'https://www.example.com'
   _NEXT_PUBLIC_BASE_PATH: '/it'
+  _NEXT_PUBLIC_SWETRIX_PROJECT_ID: 'your_swetrix_project_id'
   
   # --- Secret/VPC substitutions (Best to configure in trigger) ---
   _REDIS_HOST: '10.0.0.3'
