--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
   "include": [
     "next-env.d.ts",
     "src/types/css.d.ts",
+    "src/types/swetrix.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
