--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@meilisearch/instant-meilisearch": "^0.26.0",
+    "@next/third-parties": "^15.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "critters": "^0.0.25",
     "instantsearch.js": "^4.78.3",
