--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next/third-parties": "^15.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "critters": "^0.0.25",
+    "critters-webpack-plugin": "^3.0.2",
     "instantsearch.js": "^4.78.3",
     "ioredis": "^5.6.1",
     "isomorphic-dompurify": "^2.25.0",
