--- a/cloudbuild-stage.yaml
+++ b/cloudbuild-stage.yaml
@@ -46,6 +46,8 @@ steps:
       - 'NEXT_PUBLIC_BASE_PATH=${_NEXT_PUBLIC_BASE_PATH}'
       - '--build-arg'
       - 'NEXT_PUBLIC_SWETRIX_PROJECT_ID=${_NEXT_PUBLIC_SWETRIX_PROJECT_ID}'
+      - '--build-arg'
+      - 'NEXT_PUBLIC_RECAPTCHA_SITE_KEY=${_NEXT_PUBLIC_RECAPTCHA_SITE_KEY}'
   
   # Step 2: Push the Docker image to Google Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
@@ -95,7 +97,8 @@ steps:
         NEXT_PUBLIC_GAMES_API_URL=${_NEXT_PUBLIC_GAMES_API_URL},
         NEXT_PUBLIC_GAMES_API_TOKEN=${_NEXT_PUBLIC_GAMES_API_TOKEN},
         NEXT_PUBLIC_BASE_PATH=${_NEXT_PUBLIC_BASE_PATH},
-        NEXT_PUBLIC_SWETRIX_PROJECT_ID=${_NEXT_PUBLIC_SWETRIX_PROJECT_ID}
+        NEXT_PUBLIC_SWETRIX_PROJECT_ID=${_NEXT_PUBLIC_SWETRIX_PROJECT_ID},
+        NEXT_PUBLIC_RECAPTCHA_SITE_KEY=${_NEXT_PUBLIC_RECAPTCHA_SITE_KEY}
 
 # List of images built by this pipeline
 images:
@@ -125,7 +128,7 @@ substitutions:
   _NEXT_PUBLIC_SITE_URL: 'https://stage.example.com'
   _NEXT_PUBLIC_BASE_PATH: '/it'
   _NEXT_PUBLIC_SWETRIX_PROJECT_ID: 'your_stage_swetrix_project_id'
-
+  _NEXT_PUBLIC_RECAPTCHA_SITE_KEY: 'your_stage_recaptcha_site_key'
 options:
   logging: CLOUD_LOGGING_ONLY
   machineType: 'E2_HIGHCPU_8'
