--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -47,6 +47,8 @@ steps:
       - 'NEXT_PUBLIC_BASE_PATH=${_NEXT_PUBLIC_BASE_PATH}'
       - '--build-arg'
       - 'NEXT_PUBLIC_SWETRIX_PROJECT_ID=${_NEXT_PUBLIC_SWETRIX_PROJECT_ID}'
+      - '--build-arg'
+      - 'NEXT_PUBLIC_RECAPTCHA_SITE_KEY=${_NEXT_PUBLIC_RECAPTCHA_SITE_KEY}'
   
   # Step 2: Push the Docker image to Google Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
@@ -100,6 +102,7 @@ steps:
         REDIS_PASSWORD=${_REDIS_PASSWORD},
         NEXT_PUBLIC_BASE_PATH=${_NEXT_PUBLIC_BASE_PATH},
         NEXT_PUBLIC_SWETRIX_PROJECT_ID=${_NEXT_PUBLIC_SWETRIX_PROJECT_ID}
+        NEXT_PUBLIC_RECAPTCHA_SITE_KEY=${_NEXT_PUBLIC_RECAPTCHA_SITE_KEY}
 
 # List of images built by this pipeline
 images:
@@ -130,6 +133,7 @@ substitutions:
   _NEXT_PUBLIC_SITE_URL: 'https://www.example.com'
   _NEXT_PUBLIC_BASE_PATH: '/it'
   _NEXT_PUBLIC_SWETRIX_PROJECT_ID: 'your_swetrix_project_id'
+  _NEXT_PUBLIC_RECAPTCHA_SITE_KEY: 'your_stage_recaptcha_site_key'
   
   # --- Secret/VPC substitutions (Best to configure in trigger) ---
   _REDIS_HOST: '10.0.0.3'
